Práctica 3.3/Practica3.3AlvaroCorrochanoValentineDoutriaux/Entrega 3/iptables-rules.txt
# Generated by iptables-save v1.4.14 on Sun May 10 14:39:15 2020
*nat
:PREROUTING ACCEPT [2:134]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [6:426]
:POSTROUTING ACCEPT [7:486]
-A PREROUTING -i eth2 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.1.10:80
-A PREROUTING -i eth2 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.1.11:22
-A PREROUTING -i eth2 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.1.11:22
-A POSTROUTING -o eth2 -j MASQUERADE
COMMIT
# Completed on Sun May 10 14:39:15 2020
# Generated by iptables-save v1.4.14 on Sun May 10 14:39:15 2020
*filter
:INPUT DROP [2:134]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGDROP - [0:0]
-A INPUT -i lo -j ACCEPT
-A FORWARD -i eth1 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.1.10/32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.1.11/32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Sun May 10 14:39:15 2020
root@debian:/home/usuario#
